# auto-bright

./: Cargo.toml  README.md
src/: main.rs
